# kairox-ai-web-search-agent

./: .env  .gitignore  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
scripts/: publish.ps1
src/kairox_ai_web_search_agent/: __init__.py  agent_factory.py  cli.py  config.py  logger.py  mcp_client.py  models.py  orchestrator.py  subagents.py  tools.py  ui_chatgpt.py  ui_streamlit.py  utils.py
